--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="navBar">
     <div id="gptResponse"></div>
-    <input id="txt" placeholder="Put the request here" name="url" type="text" onkeypress="clickPress(event)" />
+    <input id="txt" placeholder="Put the request here" name="url" type="text"/>
     <button onclick="go(document.getElementById('txt').value); return false;" id="goBtn">✅</button>
     <script>
       function go(q) {
